# modmail

./: .env.example  .gitignore  README.md  docker-compose.yml  multi-server-implementation-plan.md
backend/: Cargo.toml  Dockerfile  README.md  diesel.toml
backend/.sqlx/: query-0c752482ff775c6e0089533262b7167ccff674d436908cb21577fa6609ef34fa.json  query-4710b906b8341979c51f37c5bab367bdafd78e58a10f47c69cebbbf7a8793bb5.json
backend/migrations/: 20240101000000_create_messages_table.sql  20240101000001_create_threads_table.sql  20240101000002_create_macros_table.sql  20240101000003_create_thread_messages_table.sql  20240101000004_create_notes_table.sql  20240101000005_create_blocked_users_table.sql  20240101000006_add_attachments_to_messages.sql  20240101000007_add_timestamps_to_threads.sql  20240101000008_add_quick_access_to_macros.sql  20240101000009_add_urgency_to_threads.sql  20240101000010_add_performance_indexes.sql  20240101000011_optimize_query_patterns.sql  20240101000012_add_constraints_and_optimizations.sql  20250702000000_add_guild_id_to_tables.sql  20250702000001_update_constraints_and_indexes.sql  20250702000002_create_servers_table.sql  20250702000003_create_guild_configs_table.sql
backend/src/: analytics.rs  blocked_users.rs  db.rs  errors.rs  guild_configs.rs  macros.rs  main.rs  messages.rs  models.rs  notes.rs  schema.rs  servers.rs  structs.rs  threads.rs
discord/: .prettierignore  Dockerfile  README.md  api.ts  deploy-commands.ts  index.ts  package.json  types.ts  utils.ts  webhookHandler.ts
discord/commands/: block.ts  close.ts  config.ts  delete.ts  index.ts  macro.ts  message.ts  note.ts  urgency.ts
discord/handlers/: buttonHandler.ts  channelHandler.ts  dmHandler.ts  joinHandler.ts
discord/scripts/: deploy-commands.ts
frontend/: .prettierignore  Dockerfile  README.md  package.json  vite-plugin-close.ts  vite.config.ts
frontend/src/: app.d.ts  app.html  (+1 more)
(+39 files in other folders)
